# learning-cpython

./: .gitignore  README.md
01-Py_Main/: CMakeLists.txt  README.md  main.cpp
02-PyRun_SimpleString/: README.md  main.cpp
03-WrapFunctionInBuiltinModule/: CMakeLists.txt  README.md  main.cpp
04-WrapFunctionInExtensionModule/: CMakeLists.txt  README.md  main.cpp
test1/: main.cpp
test2/: main.cpp
